# iDeepLC

./: .gitignore  MANIFEST.in  README.md  config.py  data_initialize.py  evaluate.py  figure.py  gui.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: package_test.yml  publish.yml
data/example_data/: Hela_deeprt.csv
ideeplc/: __init__.py  __main__.py  calibrate.py  config.py  data_initialize.py  evaluate.py  figure.py  fine_tuning.py  ideeplc.py  ideeplc_core.py  main.py  predict.py  train.py  utilities.py
tests/: test_CLI.py  test_config.py  test_data_initialize.py  test_model_save_path.py  test_prediction_calibration.py
