

[project]
name = "ideeplc"
description = "iDeepLC: A deep Learning-based retention time predictor for unseen modified peptides with a novel encoding system"
readme = "README.md"
authors = [
    {name = "Alireza Nameni", email = "alireza.nameni@ugent.be"},
    {name = "Robbin Bouwmeester", email = "robbin.bouwmeester@ugent.be"}
]
license = {file = "LICENSE"}
keywords = ["iDeepLC", "deep learning", "retention time", "proteomics", "peptide prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.7,<4",
    "numpy>=1.25,<2",
    "pandas>=2,<3",
    "pyteomics>=4.5,<5",
    "seaborn>=0.13,<1",
    "torch>=2.2.1,<3",
    "scikit-learn>=1.4,<2",
    "tqdm>=4.65,<5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "black",
    "flake8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ideeplc.__version__"}

[project.scripts]
deeplc = "ideeplc.__main__:main"

[project.urls]
GitHub = "https://github.com/CompOmics/iDeepLC"
CompOmics = "https://www.compomics.com"

[tool.black]
line-length = 99
target-version = ["py37"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 99
target-version = "py37"
select = ["E", "F", "B", "UP", "SIM", "I"]

